--- a/museum-adaptive/style/style.css
+++ b/museum-adaptive/style/style.css
@@ -1416,10 +1416,10 @@ header {
   font-style: normal;
   font-weight: normal;
   font-size: 50px;
-  line-height: 46px;
+  line-height: 55px;
   text-transform: uppercase;
   color: #9D8665;
-  padding-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .booking-container__left .left-container__header .subtitle {
@@ -1429,7 +1429,7 @@ header {
   font-size: 18px;
   line-height: 21px;
   color: #710707;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .booking-container__left .left-container__header .line {
@@ -2661,7 +2661,7 @@ footer {
   }
   .explore-image {
     padding-top: 0;
-    width: 100%;
+    max-width: 720px;
     margin: 0 auto;
   }
   .text-container {
@@ -2857,7 +2857,7 @@ footer {
     display: none;
   }
   .footer-container {
-    padding: 60px 0 43px 0;
+    padding: 55px 0 43px 0;
     -ms-grid-columns: 56.09% 34.55%;
         grid-template-columns: 56.09% 34.55%;
     -webkit-box-pack: justify;
@@ -2905,10 +2905,9 @@ footer {
     -webkit-column-gap: 0;
             column-gap: 0;
     margin: 0 auto;
-    overflow-y: auto;
   }
   .booking-container__left .left-container__header .title {
-    padding-bottom: 24px;
+    margin-bottom: 24px;
   }
   .booking-container__left .left-container__header .line {
     width: 100%;
@@ -3228,6 +3227,10 @@ footer {
   .explore-main .explore-main__subtitle {
     display: none;
   }
+  .explore-image {
+    width: 100%;
+    max-width: none;
+  }
   .text-container {
     padding: 40px 0 20px 0;
   }
@@ -3508,18 +3511,18 @@ footer {
     font-size: 16px;
     line-height: 18px;
   }
-  .wrapper .wrapper-container .louvre-container {
+  .welcom-louvre .wrapper .wrapper-container .louvre-container {
     width: 100%;
     padding: 6px 0 50px 0;
   }
-  .wrapper .wrapper-container .louvre-container .louvre-title {
+  .welcom-louvre .wrapper .wrapper-container .louvre-container .louvre-title {
     width: 252px;
     font-size: 28px;
     line-height: 40px;
     text-align: center;
     margin-left: 16px;
   }
-  .wrapper .wrapper-container .louvre-container .louvre-subtitle {
+  .welcom-louvre .wrapper .wrapper-container .louvre-container .louvre-subtitle {
     width: 278px;
     font-size: 16px;
     line-height: 18.75px;
@@ -3851,12 +3854,11 @@ footer {
     -webkit-column-gap: 0;
             column-gap: 0;
     margin: 0 auto;
-    overflow-y: auto;
   }
   .booking-container__left .left-container__header .title {
     font-size: 32px;
     line-height: 35px;
-    padding-bottom: 15px;
+    margin-bottom: 15px;
   }
   .booking-container__left .left-container__header .line {
     width: 100%;
