--- a/museum-adaptive/style/style.css
+++ b/museum-adaptive/style/style.css
@@ -119,7 +119,7 @@ h1, h2, h3, h4, h5, h6 {
 /*------------------------------------------------------*/
 /***Variables*/
 /***Variables End*/
-body ._lock {
+body._lock {
   overflow: hidden;
 }
 
@@ -2436,8 +2436,8 @@ footer {
     max-width: 440px;
     height: 550px;
     display: block;
-    -webkit-transition: all 0.3s ease 0s;
-    transition: all 0.3s ease 0s;
+    -webkit-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
     padding-top: 130px;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -2449,10 +2449,21 @@ footer {
   .container-nav .navigation {
     display: block;
   }
-  .container-nav .navigation .navigation-item {
-    margin: 10px 0 10px 90px;
+  .container-nav .navigation li {
+    margin-bottom: 25px;
+  }
+  .container-nav .navigation li .navigation-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 35px 0 10px 55px;
     font-size: 20px;
-    line-height: 40px;
+    line-height: 23px;
+    width: 121px;
+    background: top 5.5px right 0/12px 12px no-repeat url(../assets/images/svg/burger/arrow.svg);
+  }
+  .container-nav .navigation li:last-child {
+    margin-bottom: 0;
   }
   .container-nav_active {
     left: 0;
@@ -2472,20 +2483,12 @@ footer {
   }
   .slider-wrap_active {
     position: absolute;
-    width: 59.349%;
+    width: 71.139%;
     right: 0;
     top: 0;
     height: auto;
     overflow-x: clip;
     z-index: 1;
-  }
-  .slider-wrap-wrap .louvre-image .background-image-burger {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: rgba(196, 196, 196, 0.2);
   }
   .menu-burger {
     z-index: 5;
@@ -2502,8 +2505,8 @@ footer {
     position: absolute;
     height: 10%;
     width: 100%;
-    -webkit-transition: all 0.3s ease 0s;
-    transition: all 0.3s ease 0s;
+    -webkit-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
     background-color: #EBEBEB;
   }
   .menu-burger::before,
