--- a/museum-adaptive/style/style.scss
+++ b/museum-adaptive/style/style.scss
@@ -107,7 +107,7 @@ $font-roboto-medium: 'Roboto Medium';
 
 /***Variables End*/
 
-body ._lock {
+body._lock {
 	overflow: hidden;
 }
 
@@ -2011,7 +2011,7 @@ footer {
         max-width: 440px;
         height: 550px;
         display: block;
-        transition: all 0.3s ease 0s;
+        transition: all 0.5s ease 0s;
         padding-top: 130px;
         align-items: center;
         background-color: rgb(0, 0, 0);
@@ -2019,10 +2019,19 @@ footer {
         overflow: auto;
         .navigation {
             display: block;
-            .navigation-item {
-                margin: 10px 0 10px 90px;
-                font-size: 20px;
-                line-height: 40px;
+            li {
+                margin-bottom: 25px;
+                .navigation-item {
+                    display: flex;
+                    margin: 35px 0 10px 55px;
+                    font-size: 20px;
+                    line-height: 23px;
+                    width: 121px;
+                    background: top 5.5px right 0 / 12px 12px no-repeat url(../assets/images/svg/burger/arrow.svg);
+                }
+            }
+            li:last-child {
+                margin-bottom: 0;
             }
         }
     }
@@ -2049,25 +2058,12 @@ footer {
 
     .slider-wrap_active {
         position: absolute;
-        width: 59.349%;
+        width: 71.139%;
         right: 0;
         top: 0;
         height: auto;
         overflow-x: clip;
         z-index: 1;
-    }
-
-    .slider-wrap-wrap {
-        .louvre-image {
-            .background-image-burger {
-                position: absolute;
-                top: 0;
-                left: 0;
-                bottom: 0;
-                right: 0;
-                background: rgba(196, 196, 196, 0.2);
-            }
-        }
     }
 
     .menu-burger {
@@ -2087,7 +2083,7 @@ footer {
         position: absolute;
         height: 10%;
         width: 100%;
-        transition: all 0.3s ease 0s;
+        transition: all 0.5s ease 0s;
         background-color: #EBEBEB;
     }
     .menu-burger::before,
